cc_library(
    name = "day23",
    hdrs = ["day23.h"],
    srcs = ["day23.cc"],
    deps = [
        "//cpp:adventofcode",
        "//cpp/year2019/intcode:intcode",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day23",
        "@googletest//:gtest_main",
    ],
    data = ["//inputs:2019/23"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day23",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//inputs:2019/23"],
)
