load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "day23",
    srcs = ["day23.cc"],
    hdrs = ["day23.h"],
    deps = [
        "//cpp:adventofcode",
        "//cpp/year2019/intcode",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    data = ["//inputs:2019/23"],
    deps = [
        ":day23",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    data = ["//inputs:2019/23"],
    deps = [
        ":day23",
        "@googlebenchmark//:benchmark_main",
    ],
)
