cc_library(
    name = "day24",
    hdrs = ["day24.h"],
    srcs = ["day24.cc"],
    deps = ["//cpp:adventofcode"],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day24",
        "@googletest//:gtest_main",
    ],
    data = glob(["testdata/*"]) + ["//inputs:2019/24"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day24",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//inputs:2019/24"],
)
