load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "day24",
    srcs = ["day24.cc"],
    hdrs = ["day24.h"],
    deps = ["//cpp:adventofcode"],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    data = glob(["testdata/*"]) + ["//inputs:2019/24"],
    deps = [
        ":day24",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    data = ["//inputs:2019/24"],
    deps = [
        ":day24",
        "@googlebenchmark//:benchmark_main",
    ],
)
