cc_library(
    name = "day25",
    hdrs = ["day25.h"],
    srcs = ["day25.cc"],
    deps = [
        "//cpp:adventofcode",
        "//cpp/year2019/intcode:intcode",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":day25",
        "@googletest//:gtest_main",
    ],
    data = ["//inputs:2019/25"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        ":day25",
        "@googlebenchmark//:benchmark_main",
    ],
    data = ["//inputs:2019/25"],
)
