load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "intcode",
    srcs = ["intcode.cc"],
    hdrs = ["intcode.h"],
    visibility = ["//visibility:public"],
    deps = ["@abseil//absl/strings"],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    deps = [
        ":intcode",
        "@googletest//:gtest_main",
    ],
)
