load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "{{.FullDay}}",
    srcs = ["{{.FullDay}}.cc"],
    hdrs = ["{{.FullDay}}.h"],
    deps = ["//cpp:adventofcode"],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    data = ["//inputs:{{.Year}}/{{.PaddedDay}}"],
    deps = [
        ":{{.FullDay}}",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    data = ["//inputs:{{.Year}}/{{.PaddedDay}}"],
    deps = [
        ":{{.FullDay}}",
        "@googlebenchmark//:benchmark_main",
    ],
)
